--- a/public/courses/stat220/week9/index.html
+++ b/public/courses/stat220/week9/index.html
@@ -852,6 +852,13 @@ Before Class  Read sections 5.7-5.8 and sections 6.3-6.7 of Data Science: A Firs
 <ul>
 <li>Link to <a href="https://github.com/stat220/20-classification-evaluation" target="_blank" rel="noopener">In Class Tutorial</a></li>
 </ul>
+<p><span style="color:orange"><strong>Wednesday, 03/02</strong></span></p>
+<h3 id="before-class-1">Before Class</h3>
+<div class="alert alert-note">
+  <div>
+    Continue reading  <a href="https://datasciencebook.ca/classification.html#puttingittogetherworkflow">section 6.3-6.7 of Data Science: A First Introduction</a>. Also skim through <a href="https://www.statlearning.com/">section 4.3 (page 133-139) of An Introduction to Statistical Learning</a>. You need to download the book!
+  </div>
+</div>
 
           </div>
 
