--- a/public/courses/stat220/week9/index.html
+++ b/public/courses/stat220/week9/index.html
@@ -856,7 +856,7 @@ Before Class  Read sections 5.7-5.8 and sections 6.3-6.7 of Data Science: A Firs
 <h3 id="before-class-1">Before Class</h3>
 <div class="alert alert-note">
   <div>
-    Continue reading  <a href="https://datasciencebook.ca/classification.html#puttingittogetherworkflow">section 6.3-6.7 of Data Science: A First Introduction</a>. Also skim through <a href="https://www.statlearning.com/">section 4.3 (page 133-139) of An Introduction to Statistical Learning</a>. You need to download the book!
+    Continue reading  <a href="https://datasciencebook.ca/classification.html#puttingittogetherworkflow">section 6.3-6.7 of Data Science: A First Introduction</a>. Also, skim through <a href="https://www.statlearning.com/">section 4.3 (page 133-139) of An Introduction to Statistical Learning</a>. You need to download the book!
   </div>
 </div>
 
