--- a/public/pdf/Day22/Day22.html
+++ b/public/pdf/Day22/Day22.html
@@ -521,7 +521,7 @@ lm_fit &lt;- lm_spec %&gt;%
 lm_fit
 parsnip model object
 
-Fit time:  6ms 
+Fit time:  3ms 
 
 Call:
 stats::lm(formula = glucose ~ insulin, data = data)
@@ -665,7 +665,7 @@ class: middle
 
 
 &gt; Predicting a continuous response with a set of `\(p\)` predictors.
-predioc
+
 $$Y = \beta_0 + \beta_1X_1 + \beta_2X_2 + \cdots + \beta_k X_k $$
 
 - `\(\beta_i\)`'s are the coefficients of the model and `\(X_i\)`'s are the predictors.
@@ -784,7 +784,6 @@ db_recipe &lt;- recipe(glucose ~ ., data = db_train) %&gt;%
   step_center(all_predictors()) %&gt;% prep()
 ```
 
---
 .code90[
 
 ```r
@@ -1092,7 +1091,7 @@ Please clone the repository on [logistic regression](https://github.com/stat220/
 
 - What value of glucose gives us have a probability threshold (of having diabetes) of 0.75?
 
-<div class="countdown" id="timer_621fa2ef" style="top:0;right:0;padding:3px 4px;font-size:2em;" data-warnwhen="0">
+<div class="countdown" id="timer_621fa62f" style="top:0;right:0;padding:3px 4px;font-size:2em;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
