--- a/public/courses/stat220/week9/index.html
+++ b/public/courses/stat220/week9/index.html
@@ -867,6 +867,13 @@ Before Class  Read sections 5.7-5.8 and sections 6.3-6.7 of Data Science: A Firs
 <ul>
 <li>Link to <a href="https://github.com/stat220/21-logistic-regression" target="_blank" rel="noopener">In Class Tutorial</a></li>
 </ul>
+<p><span style="color:orange"><strong>Friday, 03/04</strong></span></p>
+<h3 id="before-class-2">Before Class</h3>
+<div class="alert alert-note">
+  <div>
+    Read <a href="https://datasciencebook.ca/clustering.html">Chapter 9 of Data Science: A First Introduction</a>. Also, skim through <a href="https://www.statlearning.com/">section 12.4.2 (page 521-526) of An Introduction to Statistical Learning</a>. on hierarchical clustering.
+  </div>
+</div>
 
           </div>
 
