--- a/public/courses/stat220/week9/index.html
+++ b/public/courses/stat220/week9/index.html
@@ -871,7 +871,7 @@ Before Class  Read sections 5.7-5.8 and sections 6.3-6.7 of Data Science: A Firs
 <h3 id="before-class-2">Before Class</h3>
 <div class="alert alert-note">
   <div>
-    Read <a href="https://datasciencebook.ca/clustering.html">Chapter 9 of Data Science: A First Introduction</a>. Also, skim through <a href="https://www.statlearning.com/">section 12.4.2 (page 521-526) of An Introduction to Statistical Learning</a>. on hierarchical clustering.
+    Read <a href="https://datasciencebook.ca/clustering.html">Chapter 9 of Data Science: A First Introduction</a>. Also, skim through <a href="https://www.statlearning.com/">section 12.4.2 (page 521-526) of An Introduction to Statistical Learning</a> on hierarchical clustering.
   </div>
 </div>
 
