--- a/public/courses/stat220/index.html
+++ b/public/courses/stat220/index.html
@@ -696,6 +696,10 @@
       
 
 
+  <li class=""><a href="/courses/stat220/week10/">Week 10</a></li>
+
+
+
   <li class=""><a href="/courses/stat220/week9/">Week 9</a></li>
 
 
