--- a/public/courses/stat220/week6/index.html
+++ b/public/courses/stat220/week6/index.html
@@ -706,6 +706,10 @@ Before Class  Please read GW 21.1-21.5 on iterations and functionals." /><meta p
       
 
 
+  <li class=""><a href="/courses/stat220/week10/">Week 10</a></li>
+
+
+
   <li class=""><a href="/courses/stat220/week9/">Week 9</a></li>
 
 
