--- a/public/courses/stat220/week8/index.html
+++ b/public/courses/stat220/week8/index.html
@@ -704,6 +704,10 @@ Before Class  Please go over the solution of the tutorial from last Friday and p
       
 
 
+  <li class=""><a href="/courses/stat220/week10/">Week 10</a></li>
+
+
+
   <li class=""><a href="/courses/stat220/week9/">Week 9</a></li>
 
 
