--- a/public/courses/stat220/week10/index.html
+++ b/public/courses/stat220/week10/index.html
@@ -858,6 +858,12 @@ Before Class  Skim through tree-based methods from ISLR labs. We will gently go 
 <ul>
 <li>Link to <a href="https://github.com/stat220/23-random-forest" target="_blank" rel="noopener">In Class Tutorial</a></li>
 </ul>
+<p><span style="color:orange"><strong>Wednesday, 03/09</strong></span></p>
+<div class="alert alert-note">
+  <div>
+    Midterm III
+  </div>
+</div>
 
           </div>
 
