--- a/public/courses/stat220/cheatsheets/index.html
+++ b/public/courses/stat220/cheatsheets/index.html
@@ -1133,6 +1133,7 @@ leaflet Cheatsheet" /><meta property="og:image" content="https://deepbas.netlify
     });
     </script>
     
+    <link rel = "stylesheet" href = "/css/main.css">
 
 
 </body>
