--- a/public/courses/stat220/rstudio-in-stat-220/index.html
+++ b/public/courses/stat220/rstudio-in-stat-220/index.html
@@ -1455,6 +1455,7 @@ drive/dropbox is another great way to lose work.</li>
     });
     </script>
     
+    <link rel = "stylesheet" href = "/css/main.css">
 
 
 </body>
