--- a/public/courses/stat220/software/index.html
+++ b/public/courses/stat220/software/index.html
@@ -1294,6 +1294,7 @@ install LaTeX. Below are the recommended installers for Windows and Mac:</p>
     });
     </script>
     
+    <link rel = "stylesheet" href = "/css/main.css">
 
 
 </body>
