--- a/public/courses/stat220/week2/index.html
+++ b/public/courses/stat220/week2/index.html
@@ -1167,6 +1167,7 @@ Before Class  Please read GW Chapter 3, GW Chapter 28 and Jenny Bryan&rsquo;s Ch
     });
     </script>
     
+    <link rel = "stylesheet" href = "/css/main.css">
 
 
 </body>
