--- a/public/courses/stat220/week5/index.html
+++ b/public/courses/stat220/week5/index.html
@@ -1159,6 +1159,7 @@ Before Class  Please read GW Chapter 14 on strings and regular expressions. Cont
     });
     </script>
     
+    <link rel = "stylesheet" href = "/css/main.css">
 
 
 </body>
