--- a/public/courses/stat220/week8/index.html
+++ b/public/courses/stat220/week8/index.html
@@ -1151,6 +1151,7 @@ Before Class  Please go over the solution of the tutorial from last Friday and p
     });
     </script>
     
+    <link rel = "stylesheet" href = "/css/main.css">
 
 
 </body>
