--- a/public/courses/stat220/week10/index.html
+++ b/public/courses/stat220/week10/index.html
@@ -1126,6 +1126,7 @@ Before Class  Skim through tree-based methods from ISLR labs. We will gently go 
     });
     </script>
     
+    <link rel = "stylesheet" href = "/css/main.css">
 
 
 </body>
