--- a/public/courses/stat220/week7/index.html
+++ b/public/courses/stat220/week7/index.html
@@ -1148,6 +1148,7 @@ Before Class  Please continue reading Irizarry Chapter 24 on web scraping. Go ov
     });
     </script>
     
+    <link rel = "stylesheet" href = "/css/main.css">
 
 
 </body>
